Disable webseeds if they send data which does not match

BUG: 261449